edition = "2023";

package raft;

option go_package = "github.com/mahmedtan/raft/raftpb";

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message RequestVoteRequest {
  int64 candidate_id = 2; // The ID of the candidate requesting the vote
  int64 current_term = 1; // The term of the candidate requesting the vote
  int64 log_length = 3; // The length of the candidate's log
  int64 last_term = 4; // The term of the last entry in the candidate's log
}

message RequestVoteResponse {
  int64 node_id = 2; // The ID of the node responding to the vote request
  int64 current_term = 1; // The current term of the node responding
  bool vote_granted = 3; // Whether the vote was granted or not
}

message PersistentState {
  int64 node_id = 2;
  int64 term = 1;
  int64 voted_for = 3;
  repeated LogEntry log_entries = 4;
}

message LogEntry {
  int64 term = 1;
  string command = 3;
}
